--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^3.2.1",
     "react": "15.2.1",
     "react-native": "0.30.0",
+    "react-native-router-flux": "^3.33.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
