login page and flow. Authentication into firebase via twitter and facebook in iOS

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ android/keystores/debug.keystore
 # Custom
 src/js/components/games/images/
 ios/GamePicker2016/Images.xcassets/
+src/data/firebaseConfig.js
