--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "redux-logger": "^2.6.1"
   }
 }
