--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "momentjs": "^1.1.15",
     "react": "15.2.1",
     "react-native": "0.30.0",
+    "react-native-code-push": "^1.14.5-beta",
     "react-native-router-flux": "^3.33.2",
     "react-native-social-auth": "^0.5.6",
     "react-redux": "^4.4.5",
