extracted firebase calls out to an APIs so that i can change from online to offline

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ src/js/components/games/images/
 ios/GamePicker2016/Images.xcassets/
 src/data/firebaseConfig.js
 Schedule.json
+/src/data/nfl-pickeroo-2016-export.js
