Added staging config file that works with react-native-config to provide environemnt variables for firebase config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-config')
     compile project(':react-native-code-push')
     compile project(':react-native-social-auth')
     compile fileTree(dir: "libs", include: ["*.jar"])
